Working on abstract
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9937 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -42,37 +42,17 @@ HINT grant and GCB training grant
 \ldots
 
 }
-\def\myabstract{
-	The retrovirus HIV-1 integrates a DNA copy of its genome into the chromosome of its host cell. This provirus can remain latent for years before coopting the host cell to express its viral genes and produce virions. The determinants of latency, the total diversity of viral alternative splicing and the resulting alterations of cellular gene activity remain uncertain. In this thesis, we apply high throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its host cells.
+\def\myabstract{ %%ABSTRACT_START%%
+	To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. In this thesis, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
 
-	First, we compare data from five different \textit{in vitro} models of latency with genomic annotations of chromosomal features. The latent phenotype appears to be associated with chromosomal position and certain features within models but not consistently across all five models. Drivers of latency appear to differ among \textit{in vitro} models and perhaps among \textit{in vivo} cell populations.
+	First, we investigated how the location of proviral integration affects latency. We compared integration site data from five different cell culture models of latency to annotations of genomic and epigenetic features. The latent phenotype was associated with chromosomal position within models but mechanisms of latency appear to differ among cell culture models. These differences suggest that current cell culture models of latency may not accurately reflect latency in patients and that a single easily-targetable mechanism for the induction of latent HIV is unlikely.
 
-	Next, we use single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced RNAs, including a previously unappreciated $\approximately{}1$ kb class of messages. Viral message populations differed between cell types, longitudinally during infection and among T cells from different human donors. 
-	
-	We then carry out a deep RNA-Seq analysis of primary human T cells infected with \hivEight{}. Seventeen percent of cellular genes showed altered activity. This data differed from studies of infection in cell lines but showed more parallels with infections of primary cells. We observe an activation of human endogenous retroviruses and retrotransposons and a global trend toward retention of introns after infection. We also quantified $>70$ splice forms of \hivEight{} mRNA and the main types of chimeric HIV-host RNAs.
+	Next, we carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then carried out a deep RNA-Seq analysis of primary human T cells infected with \hivEight{}. Seventeen percent of cellular genes showed altered activity associated with infection. These gene expression changes differed from studies of HIV infection in cell lines but showed parallels with infections in primary cells. Infection with \hivEight{} appeared to cause a global trend towards intron retention in cellular genes and an increase in RNA from human endogenous retroviruses. We also quantified chimeric HIV-host RNAs and estimate that at least 1 out of every 500 HIV transcripts is a chimera. These two studies together provided a full accounting of $>70$ spliceforms of \hivEight{} and revealed novel expression and splicing changes in both HIV and host cells.
 
-	Finally, we develop primers optimized to detect HIV-1 RNA using loop mediated isothermal amplification and empirically test 44 new potential primer designs. One primer set targeting the HIV integrase coding region consistently detected HIV-1 subtypes A, B, C, D, and G. This assay might allow quantitative measurements of viral load in resource-limited settings and the detection of infection prior to seroconversion.
-
-	These studies aid in the understanding of HIV expression and latency and its relationship with its host cell. 
-
-%HIV mRNA are expressed from the integrated provirus coding for viral proteins and daughter viral genomes. Need more information on latency, effects on host cell expression, spliceforms of HIC and easier ways to detect HIV infections. In this thesis, we assess latency  investigate HIV splcing   further investigate HIV splicing along with host expression  and work to develop an assay for detecting HIV mRNA in patient samples.
-
-	%HIV infection can be treated effectively with antiretroviral agents, but the persistence of a latent reservoir of integrated proviruses prevents eradication of HIV from infected individuals. The chromosomal environment of integrated proviruses has been proposed to influence HIV latency, but the determinants of transcriptional repression have not been fully clarified, and it is unclear whether the same molecular mechanisms drive latency in different cell culture models. 
-
-%Alternative RNA splicing greatly expands the repertoire of proteins encoded by genomes. Next-generation sequencing (NGS) is attractive for studying alternative splicing because of the efficiency and low cost per base, but short reads typical of NGS only report mRNA fragments containing one or few splice junctions. Here, we used single-molecule amplification and long-read sequencing to study the HIV-1 provirus, which is only 9700 bp in length, but encodes nine major proteins via alternative splicing. Our data showed that the clinical isolate \hivEight{} produces at least 109 different spliced RNAs, including a previously unappreciated $\approximately{}1$ kb class of messages, two of which encode new proteins. HIV-1 message populations differed between cell types, longitudinally during infection, and among T cells from different human donors. These findings open a new window on a little studied aspect of HIV-1 replication, suggest therapeutic opportunities and provide advanced tools for the study of alternative splicing. 
-
-	%Background: HIV infection has been reported to alter cellular gene activity, but published studies have commonly assayed transformed cell lines and lab-adapted HIV strains, yielding inconsistent results. Here we carried out a deep RNA-Seq analysis of primary human T cells infected with the low passage HIV isolate \hivEight{}. 
-
-	%Results: 
-
-	%Conclusions: Analysis of RNA abundance after infection of primary T cells with the low passage \hivEight{} isolate disclosed multiple novel features of HIV-host interactions, notably intron retention and induction of transcription of distinctive retrotransposons and endogenous retroviruses.
-
-	%Diagnostic methods for detecting and quantifying HIV RNA have been improving, but efficient methods for point-of-care analysis are still needed, particularly for applications in resource-limited settings. Detection based on reverse-transcription loop-mediated isothermal amplification (RT-LAMP) is particularly useful for this, because when combined with fluorescence-based DNA detection, RT-LAMP can be implemented with minimal equipment and expense. Assays have been developed to detect HIV RNA with RT-LAMP, but existing methods detect only a limited subset of HIV subtypes. Here we report a bioinformatic study to develop optimized primers, followed by empirical testing of 44 new primer designs. One primer set (ACeIN-26), targeting the HIV integrase coding region, consistently detected subtypes A, B, C, D, and G. The assay was sensitive to at least 5000 copies per reaction for subtypes A, B, C, D, and G, with Z-factors of above 0.69 (detection of the minor subtype F was found to be unreliable). There are already rapid and efficient assays available for detecting HIV infection in a binary yes/no format, but the rapid RT-LAMP assay described here has additional uses, including 1) tracking response to medication by comparing longitudinal values for a subject, 2) detecting of infection in neonates unimpeded by the presence of maternal antibody, and 3) detecting infection prior to seroconversion.
-
-
+	Finally, we developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification. We designed primer mixes targeted to regions conserved in a broad range of HIV-1 subtypes and tested 44 new primer designs to determine the most effective combination. Combined with lab on a chip technology, this technique may allow quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
 
 %No more than 350 words. It is normally a single paragraph, consists of four parts: the statement of the problem; the procedure and methods used to investigate the problem; the results of the investigation; and the conclusions. The abstract is published online by ProQuest in ``Dissertation Abstracts International'', providing information to interested readers about the general content of the dissertation.
-}
+} %%ABSTRACT_END%%
 
 
 
