About to add Alice/Christel changes
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9942 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -150,6 +150,6 @@ half life of 2 days and $10^9$ CD4 T cells per day \citep{Ho1995,Wei1995}
 
 	%
 \section{RNA detection}
-	First HIV antibody test \citep{Safai1984,Sarngadharan1984}
+	First HIV antibody test \citep{Safai1984,Sarngadharan1984} First DNA test \citep{Ou1988}
 
 \end{document}
