--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -17,7 +17,7 @@
 \def\signatures{46 pt} % Space to accommodate the signatures, you can fiddle with this as you like
 \def\mycommittee{Nancy Zhang, Ph.D. Associate Professor of Statistics \\[\baselineskip] %, University of Pennsylvania
 	Yoseph Barash, Ph.D., Assistant Professor of Genetics\\[\baselineskip]%, University of Pennsylvania
-	Kristen W. Lynch, Ph.D., Professor of Biochemistry and Biophysics\\[\baselineskip] %, University of Pennsylvania
+	Kristen Lynch, Ph.D., Professor of Biochemistry and Biophysics\\[\baselineskip] %, University of Pennsylvania
 	Michael Malim, Ph.D., Professor of Infectious Diseases, King's College London
 }
 \def\mydedication{Dedicated to William Maurer, Gayle Maurer \& Michele Sherrill-Mix}
@@ -26,30 +26,26 @@
 Rick
 
 Bushman lab Chris wetlab
-
-Hannah Chervitz and Tiffany Barlow
-
-GCB
-
-committee
-
 collaborators
+
+Friends in the Bushman lab and classmates in GCB.
+
+My committee---Nancy Zhang, Yosephy Barash, Kristen Lynch and Michael Malim---have provided . Many faculty of GCB mentoring and teaching. Hannah Chervitz and Tiffany Barlow for managing everything and helping manage the layers of bureacracy. Funding from the HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046. 
 
 Xiaofen and Otto
 
-HINT grant and GCB training grant
 
 \ldots
 
 }
 \def\myabstract{ %%ABSTRACT_START%%
-	To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. In this thesis, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
+	To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. Here, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
 
-	First, we investigated how the location of proviral integration affects latency. We compared integration site data from five different cell culture models of latency to annotations of genomic and epigenetic features. The latent phenotype was associated with chromosomal position within models but mechanisms of latency appear to differ among cell culture models. These differences suggest that current cell culture models of latency may not accurately reflect latency in patients and that a single easily-targetable mechanism for the induction of latent HIV is unlikely.
+	First, we investigated the association between the location of proviral integration and latency. We compared integration site data for latent and active provirus from five cell culture models to genomic and epigenetic features. Latency was associated with chromosomal position within models but mechanisms of latency appear to differ between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV appears unlikely.
 
-	Next, we carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then carried out a deep RNA-Seq analysis of primary human T cells infected with \hivEight{}. Seventeen percent of cellular genes showed altered activity associated with infection. These gene expression changes differed from studies of HIV infection in cell lines but showed parallels with infections in primary cells. Infection with \hivEight{} appeared to cause a global trend towards intron retention in cellular genes and an increase in RNA from human endogenous retroviruses. We also quantified chimeric HIV-host RNAs and estimate that at least 1 out of every 500 HIV transcripts is a chimera. These two studies together provided a full accounting of $>70$ spliceforms of \hivEight{} and revealed novel expression and splicing changes in both HIV and host cells.
+	Next, we carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression changes differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and increased abundance of RNA from human endogenous retroviruses. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a full accounting of more than 70 spliceforms of \hivEight{} and revealed novel expression and splicing changes in both HIV and host mRNA.
 
-	Finally, we developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification. We designed primer mixes targeted to regions conserved in a broad range of HIV-1 subtypes and tested 44 new primer designs to determine the most effective combination. Combined with lab on a chip technology, this technique may allow quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
+	Finally, we developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification. We developed methods based on primers targeted to regions of the HIV-1 genome conserved across subtypes. Combined with lab on a chip technology, these techniques allows quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
 
 %No more than 350 words. It is normally a single paragraph, consists of four parts: the statement of the problem; the procedure and methods used to investigate the problem; the results of the investigation; and the conclusions. The abstract is published online by ProQuest in ``Dissertation Abstracts International'', providing information to interested readers about the general content of the dissertation.
 } %%ABSTRACT_END%%
