Working on abstract
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9945 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -9,7 +9,7 @@
 	
 	Pneumocystis pneumonia was known to be caused by infection of the alveoli with the yeast-like fungus \emph{Pneumocystis jirovecii} \citep{Burke1973,Hughes1977}, previously known as \emph{Pneumocystis carinii} \citep{Stringer2009}. Pneumocystis pneumonia was almost exclusively seen only in patients with suppressed immune systems or immune disorders and rarely if ever in immunocompetent individuals \citep{Hughes1977}.
 
-	The mechanism for this spike of these opportunistic infection was clarified when researchers found severe T cells depletion and decreases in cellular immunity in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982} and termed the disease acquired immunodeficiency syndrome (AIDS). However, the underlying cause remained unclear. Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982,Poon1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982}, maternal transmission \citep{OReilly1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact pointed towards an infectious agent. In 1983, a virus named lymphadenopathy-associated virus or human T-lymphotropic viruses III and later renamed human immunodefficiency virus type 1 (HIV-1) was isolated from patient samples \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} and soon detected in most immunodeficient patients \citep{Gallo1984,Sarngadharan1984,Safai1984,Levy1984}.  [[fix passive]]
+	The mechanism for this spike of these opportunistic infection was clarified when researchers found severe T cells depletion and decreases in cellular immunity in these patients \citep{Masur1981,Siegal1981,Gottlieb1981a,Gerstoft1982,Masur1982} and termed the disease acquired immunodeficiency syndrome (AIDS). However, the underlying cause remained unclear. Potential transmissions by transfusion \citep{Ammann1982,Ehrenkranz1982,Poon1982}, injection drug use \citep{Masur1981,Masur1982,Greene1982}, maternal transmission \citep{OReilly1982} and both homosexual \citep{Fannin1982,Gerstoft1982} and heterosexual \citep{Masur1982,Harris1983} contact pointed towards an infectious agent. In 1983, a virus named lymphadenopathy-associated virus or human T-lymphotropic viruses III and later renamed human immunodeficiency virus type 1 (HIV-1) was isolated from patient samples \citep{Barre-Sinoussi1983,Gallo1983,Popovic1984,Levy1984} and soon detected in most immunodeficient patients \citep{Gallo1984,Sarngadharan1984,Safai1984,Levy1984}.  [[fix passive]]
 
 	Reports of AIDS and associated opportunistic infections in sub-Saharan Africa soon revealed widespread endemic infection \citep{Clumeck1983,Clumeck1984,VandePerre1984,Piot1984} and a great diversity of viruses \citep{Nkengasong1994,Louwagie1995,Vidal2000,Rambaut2001,Yang2001,Kalish2004}. Retrospective studies suggested that the virus had been present in Africa prior to its recognition in the USA \citep{Bygbjerg1983,Vandepitte1983,Clumeck1984} and circulating in Europe and USA for several decades \citep{Froland1988,Garry1988}. Isolates from what is now Kinshasa, Democratic Republic of Congo from as early as 1959 showed already existing viral diversification have been found \citep{Nahmias1986,Zhu1998,Worobey2008}. A virus similar to HIV-1 was observed in chimpanzees \citep{Peeters1989,Huet1990} and survey of wild chimpanzees revealed a likely origin of HIV-1 was from a zoonotic transmission, perhaps from harvesting of chimpanzees for food \citep{Bowen-Jones1999,Hahn2000,Peeters2002,Wolfe2004,Wolfe2005,Kalish2005}, in southeast Cameroon \citep{Gao1999,Keele2006,VanHeuverswyn2007} from which the virus was transported to an epicenter in the city of Kinshasha \citep{Vidal2000,Vangroenweghe2001,Worobey2008,Sharp2008,Faria2014}.
 	%siv cpz is itself a recombinate http://www.sciencemag.org/content/300/5626/1713.full
@@ -86,6 +86,7 @@ The HIV genome encodes genes for at least two polyproteins and seven proteins:\\
 		%http://www.nature.com/nrmicro/journal/v7/n6/full/nrmicro2111.html
 \end{description}
 
+%http://www.sciencedirect.com/science/article/pii/S0966842X04000253
 
 
 
