--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -39,13 +39,37 @@ Xiaofen and Otto
 
 }
 \def\myabstract{ %%ABSTRACT_START%%
-	To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. Here, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
 
-	First, we investigated the association between the location of proviral integration and latency. We compared integration site data for latent and active provirus from five cell culture models to genomic and epigenetic features. Latency was associated with chromosomal position within models but mechanisms of latency appear to differ between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV appears unlikely.
+	%Replication of the human immunodeficiency virus requires integration into the host genome, expression and splicing of viral genes and usurpation of host cell machinery, all while avoiding host immune response.
 
-	Next, we carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression changes differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and increased abundance of RNA from human endogenous retroviruses. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a full accounting of more than 70 spliceforms of \hivEight{} and revealed novel expression and splicing changes in both HIV and host mRNA.
+	%HIV replication is a battle between the integrated provirus and innate and adapted immunity of the host.
 
-	Finally, we developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification. We developed methods based on primers targeted to regions of the HIV-1 genome conserved across subtypes. Combined with lab on a chip technology, these techniques allows quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
+	%After integrating into host chromosome, the human immunodeficiency virus (HIV-1) commandeers host cell machinery to avoid immune response and 
+
+	%With its small genome size, the human immunodeficiency virus (HIV-1) utilizes alternative splicing 
+	%integration, expression, splicing
+	%Integration, alternative splicing and usurpation of cellular machinery all while avoiding immune response are integral to the HIV-1 replication cycle.
+
+	%HIV-1 replicatino relies on integration into host chromosome and usurpation of cellular machinery while avoiding immune response.
+	%Integration into host chromosomes and 
+	%The human immunodeficiency virus (HIV-1) replicates by integrating into host chromosomes and commandeering host cell machinery. It is unclear how the integration location affects latency or how the cell is commandeereed.
+	
+	%The human immunodeficiency virus (HIV-1) integrates into host chromosomes and then can commandeer host cell machinery to express viral genes and replicate the virus or alternatively can remain latently integrated for years.
+
+	%To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. Here, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
+
+	Replication of the human immunodeficiency virus (HIV-1) requires integration into the host genome, expression and splicing of viral genes and usurpation of host cell machinery while avoiding host immune response. Here, we applied high-throughput sequencing techniques to investigate latency, expression and splicing in HIV-1 and its effects on host cells.
+
+	In order to investigate the association between the location of proviral integration and latency, we compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
+
+	Next, we carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression changes differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and an increased abundance of RNA from human endogenous retroviruses. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of \hivEight{} alternative splicing and revealed novel expression and splicing changes in both HIV and host mRNA.
+
+	Finally, we developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allows quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
+
+		These studies used deep sequencing and bioinformatics to disclose novel HIV-host interactions and aid in the study and management of HIV-1 infection.
+
+	%These studies use deep sequencing and bioinformatics to aid in the understanding and management of HIV replication.
+%These studies illustrate the power of deep sequencing and bioinformatics in understanding and managing HIV replication and developing approaches to management.
 
 %No more than 350 words. It is normally a single paragraph, consists of four parts: the statement of the problem; the procedure and methods used to investigate the problem; the results of the investigation; and the conclusions. The abstract is published online by ProQuest in ``Dissertation Abstracts International'', providing information to interested readers about the general content of the dissertation.
 } %%ABSTRACT_END%%
