--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -58,15 +58,15 @@ Xiaofen and Otto
 
 	%To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. Here, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
 
-	Replication of the human immunodeficiency virus (HIV-1) requires integration into the host genome, expression and splicing of viral genes and usurpation of host cell machinery while avoiding host immune response. Here, we applied high-throughput sequencing techniques to investigate latency, expression and splicing in HIV-1 and its effects on host cells.
+	Replication of the human immunodeficiency virus (HIV-1) requires integration into the host genome, expression of viral genes and usurpation of host cell machinery while avoiding host immune response. Here, we applied high-throughput sequencing techniques to investigate latency, expression and splicing in HIV-1 and the effects of infection on host cells.
 
-	In order to investigate the association between the location of proviral integration and latency, we compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
+	We investigated the effect of the chromosomal location of proviral integration on latency. We compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
 
-	Next, we carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression changes differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and an increased abundance of RNA from human endogenous retroviruses. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of \hivEight{} alternative splicing and revealed novel expression and splicing changes in both HIV and host mRNA.
+	We carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression patterns differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and an increased abundance of RNA from human endogenous retroviruses and retrotransposons. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of both \hivEight{} and host expression and alternative splicing.
 
-	Finally, we developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allows quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
+	We developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allows quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
 
-		These studies used deep sequencing and bioinformatics to disclose novel HIV-host interactions and aid in the study and management of HIV-1 infection.
+	This work disclosed novel HIV-host interactions and developed techniques and knowledge that will aid in the study and management of HIV-1 infection.
 
 	%These studies use deep sequencing and bioinformatics to aid in the understanding and management of HIV replication.
 %These studies illustrate the power of deep sequencing and bioinformatics in understanding and managing HIV replication and developing approaches to management.
