--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -30,7 +30,9 @@ collaborators
 
 Friends in the Bushman lab and classmates in GCB.
 
-My committee---Nancy Zhang, Yosephy Barash, Kristen Lynch and Michael Malim---have provided . Many faculty of GCB mentoring and teaching. Hannah Chervitz and Tiffany Barlow for managing everything and helping manage the layers of bureacracy. Funding from the HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046. 
+My committee---Nancy Zhang, Yosephy Barash, Kristen Lynch and Michael Malim---have provided guidance and encouragement. Many faculty of GCB mentoring and teaching. Hannah Chervitz and Tiffany Barlow for managing everything and helping manage the layers of bureacracy. Funding from the HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046. 
+
+Ram Myers and Mike James
 
 Xiaofen and Otto
 
@@ -58,15 +60,17 @@ Xiaofen and Otto
 
 	%To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. Here, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
 
-	Replication of the human immunodeficiency virus (HIV-1) requires integration into the host genome, expression of viral genes and usurpation of host cell machinery while avoiding host immune response. Here, we applied high-throughput sequencing techniques to investigate latency, expression and splicing in HIV-1 and the effects of infection on host cells.
+	Replication of the human immunodeficiency virus (HIV-1) requires integration into the host genome, expression of viral genes and usurpation of host cell machinery while avoiding immune response. Here, we applied high-throughput sequencing techniques to investigate the effects of host chromatin on proviral latency and the interplay of gene expression and alternative splicing between host cell and HIV-1. 
 
-	We investigated the effect of the chromosomal location of proviral integration on latency. We compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
+	%We investigated the effect of the chromosomal location of proviral integration on latency. We compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
 
-	We carried out two studies to explore mRNA populations during HIV infection. We used single-molecule amplification and sequencing to show that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression patterns differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and an increased abundance of RNA from human endogenous retroviruses and retrotransposons. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of both \hivEight{} and host expression and alternative splicing.
+	Latent provirus hinder eradication yet the mechanisms which cause latency are not well understood. We compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
 
-	We developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allows quantitative measurements of viral load in a point of care device targeted to resource-limited settings.
+	We carried out two studies to explore mRNA populations during HIV infection. Single-molecule amplification and sequencing revealed that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression patterns differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and an increased abundance of RNA from human endogenous retroviruses and retrotransposons. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of both \hivEight{} and host expression and alternative splicing.
 
-	This work disclosed novel HIV-host interactions and developed techniques and knowledge that will aid in the study and management of HIV-1 infection.
+	We developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allow quantitative measurements of viral load in a point-of-care device targeted to resource-limited settings.
+
+	These studies disclosed novel HIV-host interactions and developed techniques and knowledge that will aid in the study and management of HIV-1 infection.
 
 	%These studies use deep sequencing and bioinformatics to aid in the understanding and management of HIV replication.
 %These studies illustrate the power of deep sequencing and bioinformatics in understanding and managing HIV replication and developing approaches to management.
